# insightboard

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: PRD.md  backlog.md  deploy.md  personas.md
src/Admin.Web/: Admin.Web.csproj  Dockerfile  Program.cs  appsettings.json
src/Admin.Web/Controllers/: AccountController.cs  HomeController.cs  TenantsController.cs
src/Admin.Web/Data/: AdminDbContext.cs
src/Admin.Web/Models/: DemoUser.cs  ErrorViewModel.cs  LoginViewModel.cs  Tenant.cs
src/Admin.Web/Properties/: launchSettings.json
src/Admin.Web/Views/Account/: Login.cshtml
src/Admin.Web/Views/Shared/: _Layout.cshtml
src/Admin.Web/Views/Tenants/: Create.cshtml  Edit.cshtml  Index.cshtml
src/dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json
src/dashboard/src/: App.tsx  api.test.ts  api.ts  chartData.test.ts  chartData.ts  index.css  palette.ts  useFeedbackVariant.test.ts  useFeedbackVariant.ts
src/dashboard/src/components/: AskBox.tsx  FeedbackWidget.tsx  RevenueChart.tsx  TopProducts.tsx
src/data-service/: .dockerignore  Dockerfile  pyproject.toml
src/data-service/app/: ask_llm.py  db.py  forecast.py  main.py  nlsql.py  search.py
src/data-service/scripts/: generate_demo.py
src/data-service/tests/: test_api.py  test_forecast.py  test_nlsql.py
tests/Admin.Tests/: Admin.Tests.csproj  TenantAdminTests.cs
