[project]
name = "insightboard-data"
version = "0.1.0"
description = "InsightBoard data service - order ingest, warehouse queries, product search"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "elasticsearch>=8.14",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "anthropic>=0.40",
    "truststore>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27"]
postgres = ["psycopg[binary]>=3.2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
